--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ionic-angular": "2.0.0-beta.6",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.2"
+    "node-expat": "^2.3.13",
+    "rxjs": "5.0.0-beta.2",
+    "xml2json": "^0.9.1"
   },
   "devDependencies": {
     "del": "2.2.0",
