--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ionicons": "3.0.0",
     "node-expat": "^2.3.13",
     "rxjs": "5.0.0-beta.2",
-    "xml2json": "^0.9.1"
+    "xmltojson": "^1.1.0"
   },
   "devDependencies": {
     "del": "2.2.0",
