--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ionicons": "3.0.0",
     "node-expat": "^2.3.13",
     "rxjs": "5.0.0-beta.2",
+    "xml2js": "^0.4.16",
     "xmltojson": "^1.1.0"
   },
   "devDependencies": {
